# document-classifier

./: .gitignore  README.md  pyproject.toml
src/document_classifier/: app.py  config.py  extractor.py  utils.py
tests/: test_extractor.py
